# hackathon

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: configuration.py  graph.py  graph_components.py  sample.py  state.py  tools.py  utils.py
backend/: app.py
frontend/: app.py
src/agent/: app.py  configuration.py  graph.ipynb  graph.md  graph.py  prompts.py  state.py  test.py  utils.py
