[tool.poetry]
name = "agent"
version = "0.0.1"
description = "An excellent agent build for LangGraph cloud."
authors = ["Polly the parrot <1223+polly@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langgraph = "^0.3.21"
langchain = "^0.3.22"
tavily-python = "^0.5.3"
langchain-openai = "^0.3.11"
pinecone = "^6.0.2"
langchain-huggingface = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"